...
            onValueChange = onValueChange,
            onValueChangeFinished = onValueChangeFinished,
            abbreviation = row.abbreviation,
            onValueTextClick = onValueTextClick,
            modifier = Modifier
                .padding(TonexTheme.spacing.space3)
                .testTag("masterVolume.dock"),
        )
    }
}

